# doodle_jump

./: .gitignore  CMakeLists.txt  CollisionHandler.cpp  CollisionHandler.h  Doodle.cpp  Doodle.h  EndGameMenu.cpp  EndGameMenu.h  EventHandler.cpp  EventHandler.h  EventListener.cpp  EventListener.h  Field.cpp  Field.h  Flyweight_Proxy_Tsehelnyk.pptx  Game.cpp  Game.h  IDrawable.h  IPlatform.h  README.md  Renderer.cpp  Renderer.h  ScoreLine.cpp  ScoreLine.h  SimplePlatform.cpp  SimplePlatform.h  StartMenu.cpp  StartMenu.h  Window.cpp  Window.h  main.cpp
src/: Doodle.cpp  Doodle.h  Drawable.h  EndGameMenu.cpp  EndGameMenu.h  EventListener.cpp  EventListener.h  Field.cpp  Field.h  Game.cpp  Game.h  IDrawable.h  RecordTable.cpp  RecordTable.h  Renderer.cpp  ScoreLine.cpp  ScoreLine.h  StartMenu.cpp  StartMenu.h  TypeNameMenu.cpp  TypeNameMenu.h  Window.h  WriteNameMenu.cpp  WriteNameMenu.h  main.cpp
src/record_table/: DeferredRecordTable.cpp  DeferredRecordTable.h  IRecordTable.h  RecordTable.cpp  RecordTable.h
